<resources>
    <string name="app_name">Lat2_AKB2_10116073_MuhammadRizqiZeinAzis</string>
    <string name="image_blood">Image Blood</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reshus">Reshus</string>
    <string name="email">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="blood_type">Blood Type</string>
    <string name="job">Job</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="agree_with_terms_and_conditions">Agree with Terms and Conditions</string>
    <string name="almost_there">Almost There</string>
    <string name="thank_you_for_registering_with_us_one_more">Thank you for registering with us. One more</string>
    <string name="step_you_need_to_check_your_email">step, you need to check your email</string>
    <string name="to_activate_your_account">to activate your account</string>
    <string name="verify">Verify</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="we_have_send_verification_code_to_your_email">We have send verification code to your email</string>
    <string name="enter_verification_code_here">enter verification code here..</string>
    <string name="send">Send</string>
    <string name="muhammad_rizqi_zein_azis">Muhammad Rizqi Zein Azis</string>
    <string name="blood_type_b">Blood Type : B</string>
    <string name="_75">75</string>
    <string name="_100">100</string>
    <string name="_330">330</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_receive">BLOOD RECEIVE</string>
    <string name="thanks">THANKS</string>
    <string name="search_donor">Search Donor</string>
    <string name="history_donor">History Donor</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="search_donor_near_you">Search donor near you</string>
    <string name="_4_users_need_blood">4 Users need blood</string>
    <string name="message">Message</string>
    <string name="_5_new_messages">5 New Messages</string>
    <string name="_5_gives_2_received">5 Gives, 2 Received</string>
</resources>
