<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40B4E7"
    tools:context=".AlmostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/AlmostTxtTitleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost_there"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/AlmostTxtFirstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/thank_you_for_registering_with_us_one_more"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/AlmostTxtSecondActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_you_need_to_check_your_email"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/AlmostTxtThirdActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_activate_your_account"
            android:textAlignment="center" />

        <Button
            android:id="@+id/AlmostBtnVerifynActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:background="@drawable/rndbuttonwhite"
            android:text="@string/verify"
            android:onClick="AlmostChangeActivity"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>