<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/LoginImgLogoActivity"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_welcome_logo" />

        <EditText
            android:id="@+id/LoginEdtUsernameActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="#FFFFFF"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/LoginEdtPasswordActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="#FFFFFF"
            tools:targetApi="o" />

        <Button
            android:id="@+id/LoginBtnLoginActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rndbuttonwhite"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/LoginTxtOrActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/LoginBtnFBActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="@drawable/rndbuttonwhite"
            android:drawableStart="@drawable/ic_welcome_fb_login"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:drawablePadding="15dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/connect_with_facebook"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/LoginTxtRegisterActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/white" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>