<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40B4E7"
    tools:context=".VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/VerifyTxtTitleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_account"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/VerifyTxtFirstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/we_have_send_verification_code_to_your_email"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/VerifyEdtCodeActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:textAlignment="center"
            android:hint="@string/enter_verification_code_here"
            android:inputType="textPersonName"
            android:text=""
            android:importantForAutofill="no" tools:targetApi="o"/>
        <Button
            android:id="@+id/VerifyBtnSendActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rndbuttonwhite"
            android:text="@string/send"
            android:onClick="VerifyChangeActivity"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/VerifyTxtResendActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>