<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/LoginImgLogoActivity"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_welcome_logo" />

            <EditText
                android:id="@+id/LoginEdtUsernameActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@android:color/white"
                android:textColorHint="#FFFFFF"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/LoginEdtPasswordActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@android:color/white"
                android:textColorHint="#FFFFFF"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/LoginBtnLoginActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rndbutton"
                android:textColor="#FFFFFF"
                android:onClick="SendLogin"
                android:layout_marginTop="20dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/LoginTxtOrActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/LoginBtnFBActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:background="@drawable/rndbutton"
                android:drawableLeft="@drawable/ic_welcome_fb_login"
                android:text="@string/connect_with_facebook"
                android:textColor="#FFFFFF"
                android:textAlignment="textStart"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:drawableStart="@drawable/ic_welcome_fb_login" />

            <TextView
                android:id="@+id/LoginTxtRegisterActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>